--- a/assets/style/front-style.css
+++ b/assets/style/front-style.css
@@ -4,4 +4,11 @@ body {
     background-color: blue;
     background-image: url('../images/téléchargement.jpg');
     background-repeat: no-repeat;
+    opacity: 75%;
+}
+#divImg {
+    background-image: url('../images/téléchargement.jpg');
+    width: 450px;
+    height: 450px;
+    margin : auto;
 }
